[project]
name = "medium-article-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.2",
    "arxiv>=2.4.0",
    "ddgs>=9.10.0",
    "fastapi[standard]>=0.129.0",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "googlesearch-python>=1.3.0",
    "lxml-html-clean>=0.4.3",
    "mistralai>=1.12.2",
    "newspaper4k>=0.9.4.1",
    "praw>=7.8.1",
    "pycountry>=24.6.1",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "tweepy>=4.16.0",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
